--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <header id="site-header">
-        <h1 id="site-title">عبد الرحمن العربي</h1>
-        <p id="site-tagline">مطور ومصمم ويب</p>
+        <p id="site-tagline">مطور تطبيقات و طالب جامعي</p>
     </header>
 
     <nav id="main-navigation">
@@ -26,7 +25,7 @@
             <h2>نبذة عني</h2>
             <article id="about-content">
                 <figure id="profile-image">
-                    <img src="" alt="غير متوفر">
+                    <img src="Photo.jpg" alt="غير متوفر">
                 </figure>
                 <p>مرحباً! أنا عبد الرحمن العربي، طالب جامعي أدرس حالياً مقررات في لغة C# وتطوير تطبيقات سطح المكتب. أستمتع أيضاً بإنشاء صفحات الويب وتصميم واجهات جذابة وسهلة الاستخدام.</p>
                 <p>عندما لا أكون مشغولاً بالدراسة أو البرمجة، أحب استكشاف تقنيات جديدة في تطوير الويب وتطوير مهاراتي في تصميم التطبيقات.</p>
@@ -50,19 +49,15 @@
         <section id="projects-section">
             <h2>المشاريع</h2>
             <article id="project-1" class="project">
-                <h3>موقع تجارة إلكترونية</h3>
-                <p>موقع تجارة إلكترونية متجاوب بالكامل مع تصفية المنتجات، وظائف سلة التسوق، وخيارات دفع آمنة.</p>  
+                <h3>نظام إدارة بنك </h3>
+                <p>تطبيق يسمح بفتح حسابات، إجراء عمليات إيداع وسحب، وعرض تفاصيل الحسابات بطريقة سهلة وآمنة.</p>  
             </article>
 
             <article id="project-2" class="project">
-                <h3>قالب معرض أعمال</h3>
-                <p>قالب معرض أعمال نظيف وحديث للمحترفين المبدعين مع أقسام قابلة للتخصيص.</p>       
+                <h3>مشروع تأجير سيارات</h3>
+                <p>نظام لحجز السيارات يعرض المركبات المتاحة، يسجل العملاء، ويتتبع تواريخ التأجير والإرجاع.</p>       
             </article>
 
-            <article id="project-3" class="project">
-                <h3>تطبيق الطقس</h3>
-                <p>تطبيق طقس يوفر تنبؤات في الوقت الحقيقي باستخدام واجهة برمجة تطبيقات خارجية.</p>
-            </article>
         </section>
 
 
